Florence can now be used at gdm login time.
Read the Tips section of the user manual for more information about that.
You can now use a configuraion file instead of gconf and you can explicitely specify a window to send input events to.
Florence should aso work better with unusual window managers.

Changelog:

2009-10-10 François Agrech <f.agrech@gmail.com>
	* Version 0.4.5
	* Add hard coded default settings
	* Add the --no-gnome runtime option
	* add settings-window source file for better readability
	* add the --use-config option
	* restart the auto-click timer after timeout trigger
	* add the window/keep_on_top parameter
	* add the --focus option
	* add the focus_zoom parameter
