@@ -149,13 +149,39 @@ void keyboard_symbols_draw (struct keyboard *keyboard, cairo_t *cairoctx, struct
 	keyboard_draw(keyboard, cairoctx, style, mod, STYLE_SYMBOL);
 }
 
+/* clear the focus key from surface */
+void keyboard_shape_clear (struct keyboard *keyboard, cairo_surface_t *surface,
+	struct style *style, struct key *key, gdouble zoom)
+{
+	cairo_t *cairoctx;
+	cairoctx=cairo_create(surface);
+	cairo_scale(cairoctx, zoom, zoom);
+	cairo_translate(cairoctx, keyboard->xpos, keyboard->ypos);
+	cairo_set_operator(cairoctx, CAIRO_OPERATOR_CLEAR);
+	key_shape_draw(key, style, cairoctx);
+	cairo_destroy(cairoctx);
+}
+
+/* add the focus key to surface */
+void keyboard_shape_draw (struct keyboard *keyboard, cairo_surface_t *surface,
+	struct style *style, struct key *key, gdouble zoom)
+{
+	cairo_t *cairoctx;
+	cairoctx=cairo_create(surface);
+	cairo_scale(cairoctx, zoom, zoom);
+	cairo_translate(cairoctx, keyboard->xpos, keyboard->ypos);
+	cairo_set_operator(cairoctx, CAIRO_OPERATOR_OVER);
+	key_shape_draw(key, style, cairoctx);
+	cairo_destroy(cairoctx);
+}
+
 /* draw the focus indicator on a key */
-void keyboard_focus_draw (struct keyboard *keyboard, cairo_t *cairoctx, gdouble z,
+void keyboard_focus_draw (struct keyboard *keyboard, cairo_t *cairoctx, gdouble z, gdouble w, gdouble h,
 	struct style *style, struct key *key, struct status *status)
 {
 	cairo_save(cairoctx);
 	cairo_translate(cairoctx, keyboard->xpos, keyboard->ypos);
-	key_focus_draw(key, style, cairoctx, z, status);
+	key_focus_draw(key, style, cairoctx, z, w, h, status);
 	cairo_restore(cairoctx);
 }
 
@@ -177,13 +203,26 @@ gdouble keyboard_get_height(struct keyboard *keyboard) { return keyboard->height
 enum layout_placement keyboard_get_placement(struct keyboard *keyboard) { return keyboard->placement; }
 
 /* returns a rectangle containing the key */
-void keyboard_key_getrect(struct keyboard *keyboard, struct key *key,
-	gdouble *x, gdouble *y, gdouble *w, gdouble *h)
+/* WARNING: not thread safe */
+GdkRectangle *keyboard_key_getrect(struct keyboard *keyboard, struct key *key,
+	gdouble zoom, gboolean focus_zoom)
 {
-	*x=keyboard->xpos+(key->x-(key->w/2.0));
-	*y=keyboard->ypos+(key->y-(key->h/2.0));
-	*w=key->w;
-	*h=key->h;
+	static GdkRectangle rect;
+	gdouble x, y, w, h, xmargin, ymargin;
+	x=keyboard->xpos+(key->x-(key->w/2.0));
+	y=keyboard->ypos+(key->y-(key->h/2.0));
+	w=key->w;
+	h=key->h;
+	if (focus_zoom) {
+		xmargin=(w*zoom*(settings_double_get("style/focus_zoom")-1.0))+5.0;
+		ymargin=(h*zoom*(settings_double_get("style/focus_zoom")-1.0))+5.0;
+	} else {
+		xmargin=5.0;
+		ymargin=5.0;
+	}
+	rect.x=(x*zoom)-xmargin; rect.y=(y*zoom)-ymargin;
+	rect.width=(w*zoom)+(xmargin*2); rect.height=(h*zoom)+(ymargin*2);
+	return &rect;
 }
 
 /* Get the key at position (x,y) */
